...
            VelroField(
                label: strings["profile.field.first_name"],
                text: $first,
                contentType: .givenName,
                systemImage: "person.fill",
                leftToRight: false,
                identifier: "name.first"
            )
            VelroField(
                label: strings["profile.field.last_name"],
                text: $last,
                contentType: .familyName,
                systemImage: "person.2.fill",
...
